Small style change

--- a/_drafts/optimizing-google-analytics.html
+++ b/_drafts/optimizing-google-analytics.html
@@ -85,7 +85,7 @@ function event_poller(timing, wait) {
 }
 </code></pre>
 
-<p>The functions <code>get_hidden_prop()</code> & <code>is_hidden()</code> are from, and can be found on HTML5Rocks.com <code>get_hidden_prop()</code> checks to see if the Page Visibility API is supported and for any vendor specific prefixes. <code>is_hidden()</code>, obviously, returns true/false depending on if the page is visible.</p>
+<p>The functions <code>get_hidden_prop()</code> &amp; <code>is_hidden()</code> are from, and can be found on HTML5Rocks.com <code>get_hidden_prop()</code> checks to see if the Page Visibility API is supported and for any vendor specific prefixes. <code>is_hidden()</code>, obviously, returns true/false depending on if the page is visible.</p>
 <p>As you see, this version is a lot more complicated than our initial snippet, but will it improve our measurements?</p>
 
 <img src="/public/img/high-page-time-2.jpg">
