--- a/_posts/2012-03-11-web-audio-api-overview-part1.html
+++ b/_posts/2012-03-11-web-audio-api-overview-part1.html
@@ -46,8 +46,7 @@ It is a shim by <a href="http://paulirish.com">Paul Irish</a> that makes it easi
 
 <p>The important parts for this blog post are the contents of the 2nd script tag:</p>
 
-<pre><code>
-// The audio element
+<pre><code>// The audio element
 audioElement = document.getElementById('audio');
 
 // The canvas, its context and fillstyle
