--- a/_posts/2012-06-15-getting-to-work-with-codemirror.html
+++ b/_posts/2012-06-15-getting-to-work-with-codemirror.html
@@ -10,8 +10,7 @@ redirect_from: /blog/2012/06/15/getting-to-work-with-codemirror/
 I had heared about CodeMirror before but I never really liked online IDEs. But this editor <strong>really</strong> caught my eye so I decided to try the most basic setup.</p>
 <p>Turns out, it's really simple! It's just 1, in words one, line of Javascript! (Plus basic HTML)</p>
 
-<pre><code>
-CodeMirror(document.getElementById('container'));
+<pre><code>CodeMirror(document.getElementById('container'));
 </code></pre>
 
 <p>That is all that is needed. Thanks to Marijn Haverbeke for such a great online editor.</p>
