--- a/_posts/2012-12-28-on-ulam-spirals-and-matrix-generation.html
+++ b/_posts/2012-12-28-on-ulam-spirals-and-matrix-generation.html
@@ -34,7 +34,6 @@ During the staring time I made some interesting observations, as can be seen in 
 <h2>Observations</h2>
 <p>Here is a sample 4x4 & 5x5 matrix so you can follow along:</p>
 <pre><code>
-
                     ___________________   ________________________
                     |16 | 15 | 14 | 13|   |17 | 16 | 15 | 14 | 13|
                     |-----------------|   |----------------------|
@@ -64,8 +63,7 @@ During the staring time I made some interesting observations, as can be seen in 
 <p>So I wrote a function that worked out if "dropping a frame" was possible.
 It takes coords of the location of the number you would like to have, and the dimension of the matrix.</p>
 
-<pre><code>
-function check_if_drop_frame(coords, d){
+<pre><code>function check_if_drop_frame(coords, d){
   if (d % 2 === 0){
     if (coords[0] != d && coords[1] != 1){
       return true;
@@ -86,8 +84,7 @@ function check_if_drop_frame(coords, d){
 <p>The idea is just to make the matrix smaller so, the original coords lie on the outermost frames, from which we know from the observations that they are easy values to work out.</p>
 <p>But in order to do so, we can't simply decrement the number of dimensions and leave the coords the same, we have to translate them.</p>
 
-<pre><code>
-function translate(coords, d_old){
+<pre><code>function translate(coords, d_old){
   if (d_old % 2 === 0){
     coords[1] -= 1;
   } else if (d_old % 2 === 1) {
@@ -100,8 +97,7 @@ function translate(coords, d_old){
 
 <p>This function again checks the parity and from that is knows which coord it needs to decrement, either <code>x</code> or <code>y</code>. So putting those two thing together we just drop frames/dimension as long as that is possible:</p>
 
-<pre><code>
-while (check_if_drop_frame(coords, d)){
+<pre><code>while (check_if_drop_frame(coords, d)){
     coords = translate(coords, d);
     d -= 1;
 }
@@ -110,8 +106,7 @@ while (check_if_drop_frame(coords, d)){
 <p>Once that loop has finished, it is guaranteed that the coords describe a number on one of the outermost frames.</p>
 <p>From there one only needs to find formulas to work out the value. Luckily I have already done that for you, they are a bit messy but they work. Wrapped in a function they look roughly like this:</p>
 
-<pre><code>
-function work_out_value(coords, d){
+<pre><code>function work_out_value(coords, d){
   var val = -1;
 
   var x = coords[0],
