--- a/_posts/2013-05-11-javascript-mapreduce.html
+++ b/_posts/2013-05-11-javascript-mapreduce.html
@@ -14,15 +14,13 @@ redirect_from: /blog/2013/05/11/javascript-mapreduce/
 
 <p>As a datasource we'll use <a href="https://news.ycombinator.com/bigrss">HackerNews' big RSS feed</a> and since we can treat RSS as plain HTML, it's very simple to get started:</p>
 
-<pre><code>
-var titles = document.getElementsByTagName('title');
+<pre><code>var titles = document.getElementsByTagName('title');
 </code></pre>
 
 <p>This is simply getting all the titles from the RSS feed. But we have a problem, <code>getElementsByTagName</code> returns a <code>NodeList</code> and not an <code>Array</code>, which hasn't got the cool MapReduce functionallity we want.</p>
 <p>So we have to convert it to an array, and whilst doing so, we can also grab all the titles as strings, instead of HTML Nodes</p>
 
-<pre><code><span class="grayout">
-var titles = Array.prototype.slice.call(document.getElementsByTagName('title'))</span>
+<pre><code><span class="grayout">var titles = Array.prototype.slice.call(document.getElementsByTagName('title'))</span>
   .map(function(node) {
     return node.innerText;
   });
@@ -40,8 +38,7 @@ var titles = Array.prototype.slice.call(document.getElementsByTagName('title'))<
   So the callback function's signature would look something like this:
 </p>
 
-<pre><code>
-var callback = function(element, index, context) { /* omitted */ }
+<pre><code>var callback = function(element, index, context) { /* omitted */ }
 </code></pre>
 
 <h2>Unwanted punctuation & Individual words</h2>
@@ -51,8 +48,7 @@ var callback = function(element, index, context) { /* omitted */ }
   These are unwanted in our final wordcount, so we remove them. This can be done in the same <code>map</code> call. Isn't Javascript a great language:
 </p>
 
-<pre><code><span class="grayout">
-var words = Array.prototype.slice.call(document.getElementsByTagName('title'))</span>
+<pre><code><span class="grayout">var words = Array.prototype.slice.call(document.getElementsByTagName('title'))</span>
   .map(function(node) {
     return node.innerText.toLowerCase().match(/([a-z]+)/g);
   });
@@ -64,8 +60,7 @@ var words = Array.prototype.slice.call(document.getElementsByTagName('title'))</
   Good job we've got <code>reduce</code>:
 </p>
 
-<pre><code><span class="grayout">
-var words = Array.prototype.slice.call(document.getElementsByTagName('title'))
+<pre><code><span class="grayout">var words = Array.prototype.slice.call(document.getElementsByTagName('title'))
   .map(function(node) {
     return node.innerText.toLowerCase().match(/([a-z]+)/g);
   })</span>
@@ -82,8 +77,7 @@ var words = Array.prototype.slice.call(document.getElementsByTagName('title'))
   The <code>initialValue</code> parameter will be easier to understand once you see the callback's signature:
 </p>
 
-<pre><code>
-var callback = function(previousValue, currentValue, index, context) { /* omitted */ }
+<pre><code>var callback = function(previousValue, currentValue, index, context) { /* omitted */ }
 </code></pre>
 
 <aside>Note: We wouldn't actually end up with a ginormous string, because strings don't have a <code>push</code> method. It would just error out.</aside>
@@ -98,8 +92,7 @@ var callback = function(previousValue, currentValue, index, context) { /* omitte
 
 <p>For this task, we can again use reduce, but before we start let me show you what the result will look like:</p>
 
-<pre><code>
-[['the', 'on', 'news', 'hacker', ...], [50, 66, 20, 19, ...]]
+<pre><code>[['the', 'on', 'news', 'hacker', ...], [50, 66, 20, 19, ...]]
 </code></pre>
 
 <p>
@@ -112,8 +105,7 @@ var callback = function(previousValue, currentValue, index, context) { /* omitte
   To code this, we'll use <code>reduce</code> again and as an inital value we'll specify: <code>[[], []]</code>
 </p>
 
-<pre><code><span class="grayout">
-var scores = Array.prototype.slice.call(document.getElementsByTagName('title'))
+<pre><code><span class="grayout">var scores = Array.prototype.slice.call(document.getElementsByTagName('title'))
   .map(function(node) {
     return node.innerText.toLowerCase().match(/([a-z]+)/g);
   })
@@ -146,14 +138,12 @@ var scores = Array.prototype.slice.call(document.getElementsByTagName('title'))
   The format this final array will be in is as follows:
 </p>
 
-<pre><code>
-[['the', 50], ['on', 66], ['news', 20], ['hacker', 19], ...]
+<pre><code>[['the', 50], ['on', 66], ['news', 20], ['hacker', 19], ...]
 </code></pre>
 
 <p>For this we'll use <code>reduce</code> again and utilize the 4th parameter passed to the callback:</p>
 
-<pre><code><span class="grayout">
-var scores = Array.prototype.slice.call(document.getElementsByTagName('title'))
+<pre><code><span class="grayout">var scores = Array.prototype.slice.call(document.getElementsByTagName('title'))
   .map(function(node) {
     return node.innerText.toLowerCase().match(/([a-z]+)/g);
   })
