Abstract and un-published

--- a/_posts/2014-07-07-experiencing-haskell.html
+++ b/_posts/2014-07-07-experiencing-haskell.html
@@ -1,7 +1,8 @@
 ---
 layout: post
 title: Experiencing Haskell
-abstract:
+abstract: Dabble into the functional world with Haskell.
+published: false
 ---
 
 <p>There seems to be a growing interest in (purely) functional languages these days. I've looked at lots of different languages in the past (such as Go, Python, Ruby and others) but never a purely functional one. So recently I decided to dig into Haskell, with a view to discovering some of the fundamental differences. I wanted to share some of my findings with you in this post.</p>
